--- a/src/pages/teams/TeamsStyles.css
+++ b/src/pages/teams/TeamsStyles.css
@@ -1,23 +1,30 @@
 #teams-container {
+  margin: 0 5%;
   margin-top: 50px;
 }
 #team-text {
   max-width: 800px;
 }
-#team-images-container {
-  display: flex;
+.team-image-container {
+  /* display: flex; */
+  /* flex-wrap: wrap; */
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   column-gap: 50px;
   row-gap: 80px;
   justify-content: center;
-  flex-wrap: wrap;
-  margin: 5% 8%;
+  margin: 30px 0;
+}
+.team-image-card {
+  width: 260px;
+  object-fit: cover;
+  border-radius: 5px;
 }
 .team-image {
-  width: 300px;
-  max-height: 300px;
-  object-fit: cover;
-  border-radius: 20px;
-  object-position: top;
+  width: 260px;
+  height: 330px;
+  object-fit: contain;
+  border-radius: 5px;
 }
 .team-image:hover {
   transform: scale(1.005);
@@ -30,7 +37,53 @@
 }
 .team-designation {
   text-align: center;
-  font-size: 15px;
+  font-size: 16px;
   color: var(--color-text-gray);
   font-weight: 500;
+}
+.team-name-container {
+  margin-top: 5px;
+  background-image: var(--color-background-gradient);
+  padding: 10px 20px;
+}
+.teams-segment {
+  display: flex;
+  align-items: center;
+}
+.teams-segment-line {
+  height: 2px;
+  border: 1px solid #f3f3f3;
+  width: 100%;
+}
+.teams-segment-title {
+  padding: 5px 0;
+  padding-right: 10px;
+  font-weight: 500;
+  font-size: 24px;
+}
+#team-data-container {
+  margin: 60px 0;
+}
+@media (max-width: 1680px) {
+  .team-image-container {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+  }
+}
+@media (max-width: 1250px) {
+  .team-image-container {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+@media (max-width: 920px) {
+  .team-image-container {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 600px) {
+  .team-image-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
 }
